<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/youAreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/title"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="470dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/trendy" />

            <TextView
                android:id="@+id/definitionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:textColor="@color/title"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/general_statistics"
                android:textColor="@color/title"
                android:textSize="40sp" />

            <ListView
                android:id="@+id/otherResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:divider="@null"
                android:dividerHeight="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:text="@string/select_social_network"
                android:textColor="@color/title"
                android:textSize="18sp" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/shareVK"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:clickable="true"
                    android:src="@drawable/vk_selector" />

                <ImageView
                    android:id="@+id/shareFacebook"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:clickable="true"
                    android:src="@drawable/facebook_selector" />

                <ImageView
                    android:id="@+id/shareTwitter"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:clickable="true"
                    android:src="@drawable/twitter_selector" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="5dp"
                android:background="@color/title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/feedback_title"
                android:textColor="@color/title"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/send_button"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="@color/title"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/feedback_text"
                    android:textColor="@color/title"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
